# mpc_controller

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  mpc_controller_plugins.xml  package.xml
.github/workflows/: ci.yml
config/: diff_drive_mpc.yaml  rrbot_mpc.yaml
include/mpc_controller/: linear_model.hpp  model_base.hpp  mpc_controller.hpp  osqp_solver.hpp  solver_base.hpp  types.hpp
launch/: diff_drive_mpc.launch.py  rrbot_mpc.launch.py
scripts/: analyze_paired_ab.py  benchmark_plot.py  run_benchmark.sh  run_paired_bench.sh  run_single_bench.sh  trajectory_publisher.py
src/: linear_model.cpp  mpc_controller.cpp  osqp_solver.cpp
test/: mpc_controller_test.cpp  osqp_solver_test.cpp  osqp_standalone_test.cpp  test_osqp_c_api.c
urdf/: rrbot.xacro.urdf
